--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ safe: true
 
 
 url: http://tanvi-surana.github.io/
-baseurl: http://tanvisurana.github.io/
+baseurl: http://tanvi-surana.github.io/
 # url: ""
 # baseurl: ""
 title: Tanvi Surana
